button mobile width fix

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -66,7 +66,8 @@ button.pill {
     width: 100%;
   }
 
-  .button-group button {
+  .button-group button,
+  a {
     width: 100%;
   }
 }
