--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,8 @@ button.pill {
     flex-direction: column;
     width: 100%;
   }
-  .button-group button {
+  .button-group button,
+  a {
     width: 100%;
   }
 }
